# Booster_mega

./: Dockerfile  docker-compose.yaml  pyproject.toml  pytest.ini  requirement.txt
app_articles/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app_articles/migrations/: 0001_initial.py  0002_alter_imagearticles_options_and_more.py
app_courses/: admin.py  models.py  serializers.py  tests_example.py  urls.py  views.py
app_courses/migrations/: 0001_initial.py  0002_remove_courseblock_course_direction_courseprogram_and_more.py
app_events/: admin.py  models.py  serializers.py  views.py
app_events/migrations/: 0001_initial.py  0002_alter_events_image.py
app_miscellaneous/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app_miscellaneous/migrations/: 0001_initial.py  0002_alter_contactus_options.py  0002_rename_image_gallery_delete_reviews.py  0003_alter_gallery_options.py
app_reviews/: models.py  serializers.py  urls.py  views.py
app_reviews/migrations/: 0001_initial.py  0002_alter_reviews_options.py
app_users/: admin.py  models.py
app_users/migrations/: 0001_initial.py
config/: jazzmin_settings.py  settings.py  urls.py  views.py
config/jazzmin/: jazzmin_settings.py
